@@ -16,7 +16,7 @@
 </ul>
 <div class="wtabs extl" id="pb">
   {% if page.body %}
-    {{ page.body|wikify }}
+    {{ page|wikify_page }}
     {% if page_labels %}
       <p class="categories">{% if settings.labels_text %}{{ settings.labels_text }}{% else %}Labels{% endif %}: {% for label in page_labels %}{% if forloop.first %}{% else %}, {% endif %}<a class="int" href="{{ label|labelurl }}">{{ label|escape }}</a>{% endfor %}.</p>
     {% endif %}
