@@ -20,6 +20,7 @@ gae-wiki 1.1
 - Google Maps and article geotagging.
 - New page property: date.
 - Pages can be sorted by date using the [[List:label;sort=date,desc]] syntax.
+- Added an MP3 player.
 
 
 gae-wiki 1.0 (20110514)
